# led-detector

./: TFLite_detection_webcam.py  pyproject.toml  tflite.py
