[tool.poetry]
name = "led-detector"
version = "0.1.0"
description = ""
authors = ["Tom Haynes <tghaynes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
jupyter = "^1.1.1"
notebook = "^7.2.2"
tqdm = "^4.67.0"
lxml = "^5.3.0"
PyQt5 = "=5.15.2"   

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.rpi.dependencies]
tflite-runtime = "^2.14.0"
